--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #2780aa;
+	background-color: #42433f;
 }
 header {
 	background-color: #333;
