--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #f4e9cd;
+	background-color: #eaf2ef;
 }
 .Intro {
 	color: #101d42;
