--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #101d42;
+	background-color: #f9f5e3;
 }
 .Intro {
-	color: #f9f5e3;
+	color: #101d42;
 }
 
 .Iteration{
