--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
 }
 .Intro {
 	color: #101d42;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #a599b5;
+	border-radius: 2px;
 }
 
 .Iteration{
@@ -14,4 +18,5 @@ body {
 
 .Projects{
 	color: #0e79b2;
+	border: 4px solid #A599B5
 }
