--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
 	border-width: 2px;
 	border-color: #a599b5;
 	border-radius: 2px;
+	position: relative;
+  	left: 30px;
 }
 
 .Iteration{
@@ -19,4 +21,6 @@ body {
 .Projects{
 	color: #0e79b2;
 	border: 4px solid #A599B5
+	position: relative;
+  	left: 30px;
 }
