--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 	border-style: solid;
 	border-width: 2px;
 	border-color: #a599b5;
-	border-radius: 2px;
+	border-radius: 4px;
 	position: relative;
   	left: 30px;
 	padding: 5px;
@@ -21,8 +21,8 @@ body {
 
 .Projects{
 	color: #0e79b2;
-	border: 4px solid #A599B5
+	border: 4px solid #A599B5;
 	position: relative;
-  	left: 30px;
-	padding: 5px;
+  	left: 50px;
+	padding: 20px;
 }
