--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@ body {
 }
 .Intro {
 	color: #101d42;
+	text-align: centre;
 	border-style: solid;
 	border-width: 2px;
 	border-color: #a599b5;
 	border-radius: 4px;
 	position: relative;
   	left: 30px;
+	right: 30px;
 	padding: 5px;
 }
 
