--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 .Intro {
 	color: #101d42;
-	text-align: centre;
+	text-align: center;
 	border-style: solid;
 	border-width: 2px;
 	border-color: #a599b5;
@@ -25,6 +25,6 @@ body {
 	color: #0e79b2;
 	border: 4px solid #A599B5;
 	position: relative;
-  	left: 50px;
+  	right: 50px;
 	padding: 20px;
 }
