--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,9 @@ body {
 	border-width: 2px;
 	border-color: #a599b5;
 	border-radius: 4px;
-	position: relative;
-  	left: 100px;
-	right: 200px;
 	padding: 5px;
+	margin-left: 120px;
+	margin-right: 120px;
 }
 
 .Iteration{
@@ -26,6 +25,7 @@ body {
 	text-align: center;
 	border: 4px solid #A599B5;
 	position: relative;
-  	right: 50px;
 	padding: 20px;
+	margin-left: 80px;
+	margin-right: 80px;
 }
