--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,12 @@ body {
 	text-align: center;
 	border-style: solid;
 	border-width: 2px;
-	border-color: #a599b5;
+	border-color: #0E79B2;
 	border-radius: 4px;
 	padding: 5px;
 	margin-left: 120px;
 	margin-right: 120px;
+	margin-top: 20px;
 }
 
 .Iteration{
@@ -21,11 +22,12 @@ body {
 }
 
 .Projects{
-	color: #0e79b2;
+	color: #101d42;
 	text-align: center;
-	border: 4px solid #A599B5;
+	border: 4px solid #0E79B2;
 	position: relative;
 	padding: 20px;
 	margin-left: 80px;
 	margin-right: 80px;
+	margin-top: 20px;
 }
