--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,11 @@ body {
 .Intro {
 	color: #101d42;
 	text-align: center;
-	border-style: solid;
-	border-width: 2px;
-	border-color: #0E79B2;
+	border: 3px solid #0E79B2;
 	border-radius: 4px;
-	padding: 5px;
-	margin-left: 120px;
-	margin-right: 120px;
+	padding: 2px;
+	margin-left: 200px;
+	margin-right: 200px;
 	margin-top: 20px;
 }
 
@@ -24,10 +22,10 @@ body {
 .Projects{
 	color: #101d42;
 	text-align: center;
-	border: 4px solid #0E79B2;
-	position: relative;
-	padding: 20px;
-	margin-left: 80px;
-	margin-right: 80px;
+	border: 3px solid #0E79B2;
+	border-radius: 4px;
+	padding: 2px;
+	margin-left: 250px;
+	margin-right: 250px;
 	margin-top: 20px;
 }
