--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 	background-color: #f9f5e3;
 }
 .Intro {
+	background-color: #FFFFFF;
 	color: #101d42;
 	text-align: center;
 	border: 3px solid #0E79B2;
