--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #FFFFFF;
+	background-color: #101d42;
 }
 .Intro {
 	background-color: #f9f5e3;
