--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .Projects{
-	background-color: f9f5e3;
+	background-color: #f9f5e3;
 	color: #101d42;
 	text-align: center;
 	border: 4px solid #0E79B2;
@@ -32,4 +32,18 @@ body {
 	margin-right: 280px;
 	margin-top: 20px;
 	line-height: 0.5
+}
+
+.button{
+	background-color: grey;
+	border : none;
+	color : black;
+	padding : 16px 32px;
+	cursor: pointer;
+	transition-duration: 0.4s;
+}
+
+.button:hover{
+	background-color: yellow;
+	color: white;
 }
