--- a/styles.css
+++ b/styles.css
@@ -34,15 +34,19 @@ body {
 }
 
 .button{
-	background-color: grey;
-	border : none;
-	color : black;
-	padding : 16px 32px;
+	background-color: #f9f5e3;
+	border : 4px solid #0e79b2;
+	border-radius: 3px;
+	color : 101d42;
+	padding : 16px 16px;
 	cursor: pointer;
-	transition-duration: 4s;
+	transition-duration: 0.4s;
+	margin-left: 280px;
+	margin-top: 1px;
 }
 
 .button:hover{
-	background-color: yellow;
-	color: white;
+	background-color: #101d42;
+	color: f9f5e3;
+	border: none;
 }
