--- a/styles.css
+++ b/styles.css
@@ -37,16 +37,16 @@ body {
 	background-color: #f9f5e3;
 	border : 4px solid #0e79b2;
 	border-radius: 3px;
-	color : 101d42;
+	color : #101d42;
 	padding : 16px 16px;
 	cursor: pointer;
 	transition-duration: 0.4s;
 	margin-left: 280px;
-	margin-top: 1px;
+	margin-top: 0px;
 }
 
 .button:hover{
-	background-color: #101d42;
-	color: f9f5e3;
-	border: none;
+	background-color: #816C61;
+	color: #101d42;
+	border: 4px solid #816C61;
 }
