--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 	background-color: #f9f5e3;
 	color: #101d42;
 	text-align: center;
-	border: 5px solid #0E79B2;
+	border: 4px solid #0E79B2;
 	border-radius: 8px;
 	padding: 1px;
 	margin-left: 300px;
@@ -24,8 +24,9 @@ body {
 	background-color: #f9f5e3;
 	color: #101d42;
 	text-align: center;
-	border: 4px solid #0E79B2;
+	border: 3px solid #0E79B2;
 	border-radius: 8px;
+	border-bottom-radius: 0px;
 	padding: 2px;
 	margin-left: 280px;
 	margin-right: 280px;
@@ -35,10 +36,10 @@ body {
 
 .button{
 	background-color: #f9f5e3;
-	border : 4px solid #0e79b2;
+	border: 3px solid #0e79b2;
 	border-radius: 3px;
-	color : #101d42;
-	padding : 16px 16px;
+	color: #101d42;
+	padding: 16px 16px;
 	cursor: pointer;
 	transition-duration: 0.4s;
 	margin-left: 280px;
@@ -46,7 +47,8 @@ body {
 }
 
 .button:hover{
-	background-color: #816C61;
-	color: #101d42;
-	border: 4px solid #816C61;
+	background-color: #101d42;
+	color: #f9f5e3;
+	border: 3px solid #816C61;
+	border-top-radius: 0px;
 }
