--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,13 @@ body {
 	margin-left: 280px;
 	margin-right: 280px;
 	margin-top: 20px;
-	line-height: 0.9;
+	line-height: 1.0;
 }
 
 .button{
 	background-color: #f9f5e3;
 	border: 3px solid #0e79b2;
+	border-radius: 8px;
 	color: #101d42;
 	padding: 16px 16px;
 	cursor: pointer;
