--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 .Iteration{
-	color: #a599b5;
+	color: White;
 }
 
 .Projects{
@@ -43,6 +43,8 @@ body {
 .button{
 	background-color: #f9f5e3;
 	border: 3px solid #0e79b2;
+	border-left-style: none ;
+	border-bottom-style: none;
 	border-radius: 8px;
 	color: #101d42;
 	padding: 16px 16px;
