--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 .Projects{
 	background-color: #f9f5e3;
 	color: #101d42;
-	text-allign: center;
+	text-align: center;
 	border: 3px solid #0E79B2;
 	border-radius: 8px;
 	margin-left: 280px;
