--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,9 @@ body {
 .button{
 	background-color: #f9f5e3;
 	border: 3px solid #0e79b2;
-	border-bottom-style: none;
 	color: #101d42;
-	padding: 16px 16px;
+	padding: 8px 8px;
+	border-radius: 2px;
 	cursor: pointer;
 	transition-duration: 0.4s;
 	margin-top: 1px;
