--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
 	background-color: #f9f5e3;
 	color: #101d42;
 	text-align: center;
+	padding: 2px;
 	border: 3px solid #0E79B2;
 	border-radius: 8px;
 	margin-left: 280px;
