--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ body {
 	border: 4px solid #0E79B2;
 	border-radius: 8px;
 	padding: 1px;
-	margin-left: 300px;
-	margin-right: 300px;
-	margin-top: 20px;
+	margin-left: 20vw;
+	margin-right: 20vw;
+	margin-top: 10vw;
 }
 
 .center{
@@ -35,8 +35,8 @@ body {
 	padding: 2px;
 	border: 3px solid #0E79B2;
 	border-radius: 8px;
-	margin-left: 280px;
-	margin-right: 280px;
+	margin-left: 10vw;
+	margin-right: 30vw;
 	margin-top: 20px;
 	line-height: 1.0;
 }
