--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ body {
 	border: 4px solid #0E79B2;
 	border-radius: 8px;
 	padding: 1px;
-	margin-left: 20vw;
-	margin-right: 20vw;
-	margin-top: 10vw;
+	margin-left: 8vw;
+	margin-right: 8vw;
+	margin-top: 5vh;
 }
 
 .center{
@@ -35,9 +35,9 @@ body {
 	padding: 2px;
 	border: 3px solid #0E79B2;
 	border-radius: 8px;
-	margin-left: 10vw;
-	margin-right: 30vw;
-	margin-top: 20px;
+	margin-left: 20vw;
+	margin-right: 20vw;
+	margin-top: 5vh;
 	line-height: 1.0;
 }
 
