--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,6 @@ body {
 	position: fixed;
 	top: 0;
 	z-index: 50;
-	border: 1px solid black;
-	border-top-style: hidden;
-	border-bottom-style: hidden;
 	border-radius: 0px;
 	width: 100%;
 	height: 8vh;
@@ -70,6 +67,7 @@ body {
 	float: left;
 	height: 8vh;
 	padding: 0vh 2vw;
+	border-right: 0.2vw solid black;
 }
 
 .menuButt:hover{
