--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
 	border-right: 0.1vw solid black;
 	border-top: hidden;
 	border-bottom: hidden;
-	border-lef: hidden;
+	border-left: hidden;
 }
 
 .menuButt:hover{
