--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #272B27;
+	background-color: #101C42;
 }
 .Intro {
 	background-color: #f9f5e3;
@@ -52,24 +52,23 @@ body {
 }
 
 .menu{
+	float: left;
 	position: fixed;
-	left: 0;
+	top: 0;
 	z-index: 50;
 	border-radius: 0px;
 	border: hidden;
-	height: 100%;
-	width: 8vw;
-	background-color: #101d42;
-	text-align: center;
+	width: 100%;
+	height: 8vh;
+	background-color: white;
 }
 
 .menuButt{
-	color: #F4EDED;
-	background-color: #101d42;
-	display: block;
+	background-color: white;
+	float: left;
 	height: 8vh;
-	padding: 2vh 2vw;
-	border-top: 0.05vh solid black;
+	padding: 0vh 2vw;
+	border-right: 0.1vw solid black;
 	border-top: hidden;
 	border-bottom: hidden;
 	border-left: hidden;
