--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,18 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #101C42;
+	background-color: #272B27;
+	color: #F4EDED;
 }
 .Intro {
-	background-color: #f9f5e3;
+	background-color: #272B27;
 	color: #101d42;
 	text-align: center;
-	border: 4px solid #0E79B2;
-	border-radius: 8px;
-	padding: 1px;
-	margin-left: 8vw;
-	margin-right: 8vw;
+	border: 4px solid #101d42;
+	border-left: hidden;
+	border-right: hidden;
+	padding: 3vh 2vh;
 	margin-top: 12vh;
-}
-
-.Iteration{
-	color: Black;
 }
 
 .Projects{
