--- a/styles.css
+++ b/styles.css
@@ -53,19 +53,20 @@ body {
 	z-index: 50;
 	border-radius: 0px;
 	border: hidden;
+	border-bottom: 0.05vh solid #F4EDED;
 	width: 100%;
 	height: 8vh;
-	background-color: white;
+	background-color: #F4EDED;
 }
 
 .menuButt{
-	background-color: white;
+	background-color: #F4EDED;
 	float: left;
 	height: 8vh;
 	padding: 0vh 2vw;
-	border-right: 0.1vw solid black;
+	border-right: 0.1vw solid #F4EDED;
 	border-top: hidden;
-	border-bottom: hidden;
+	border-bottom: 0.05vh solid #F4EDED;
 	border-left: hidden;
 }
 
