--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 	z-index: 50;
 	border-radius: 0px;
 	border: hidden;
-	border-bottom: 0.05vh solid #F4EDED;
+	border-bottom: 0.05vh solid #272B27;
 	width: 100%;
 	height: 8vh;
 	background-color: #F4EDED;
@@ -64,9 +64,9 @@ body {
 	float: left;
 	height: 8vh;
 	padding: 0vh 2vw;
-	border-right: 0.1vw solid #F4EDED;
+	border-right: 0.1vw solid #272B27;
 	border-top: hidden;
-	border-bottom: 0.05vh solid #F4EDED;
+	border-bottom: 0.05vh solid #272B27;
 	border-left: hidden;
 }
 
