--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 .Intro {
 	background-color: #272B27;
 	text-align: center;
-	border: 4px solid #F4EDED;
+	border: 1vh solid #F4EDED;
 	border-left: hidden;
 	border-right: hidden;
 	padding: 3vh 2vh;
@@ -16,16 +16,16 @@ body {
 }
 
 .Projects{
-	background-color: #f9f5e3;
-	color: #101d42;
+	background-color: #272B27;
+	color: #F4EDED;
 	text-align: center;
-	padding: 2px;
-	border: 3px solid #0E79B2;
-	border-radius: 8px;
+	padding: 2vh 4vw;
+	border: 1vh solid #F4EDED;
+	border-left: hidden;
 	margin-left: 20vw;
+	border-right: hidden;
 	margin-right: 20vw;
 	margin-top: 11vh;
-	line-height: 1.0;
 }
 
 .button{
