--- a/styles.css
+++ b/styles.css
@@ -29,17 +29,17 @@ body {
 }
 
 .button{
-	border: 3px solid #F4EDED;
-	padding: 8px 8px;
-	border-radius: 5px;
+	border: 0.5vw solid #F4EDED;
+	padding: 2vh 2vw;
+	border-radius: 3vw;
 	cursor: pointer;
 	transition-duration: 0.4s;
-	margin-top: 1px;
-	margin-bottom: 0px;
+	margin-top: 0.5vh;
 }
 
 .button:hover{
 	background-color: #303630;
+	color: F4EDED;
 }
 
 .menu{
@@ -47,8 +47,6 @@ body {
 	position: fixed;
 	top: 0;
 	z-index: 50;
-	border-radius: 0px;
-	border: hidden;
 	border-bottom: 0.05vh solid #272B27;
 	width: 100%;
 	height: 8vh;
