--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,34 @@ body {
 	margin-top: 11vh;
 }
 
+h1 {
+	text-align: center;
+}
+
+ul {
+	text-align: left;
+}
+
+.acheivements1 {
+	background-color: #272B27;
+	color: #F4EDED;
+	padding: 2vh 4vw;
+	border: 0.4vh solid #F4EDED;
+	margin-top: 11vh;
+	position: relative;
+	left: 30vw;
+}
+
+.acheivements2 {
+	background-color: #272B27;
+	color: #F4EDED;
+	padding: 2vh 4vw;
+	border: 0.4vh solid #F4EDED;
+	margin-top: 11vh;
+	position: relative;
+	left: 70vw;
+}
+
 .readMoreLessButton{
 	border: 0.1vw solid #F4EDED;
 	padding: 1vh 1vw;
