--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ ul {
 	text-align: left;
 }
 
-.acheivements1 {
+.achievements1 {
 	background-color: #272B27;
 	color: #F4EDED;
 	padding: 2vh 4vw;
@@ -46,7 +46,7 @@ ul {
 	left: 30vw;
 }
 
-.acheivements2 {
+.achievements2 {
 	background-color: #272B27;
 	color: #F4EDED;
 	padding: 2vh 4vw;
