--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ ul {
 	padding: 2vh 4vw;
 	border: 0.4vh solid #F4EDED;
 	margin-top: 11vh;
+	margin-left: 5vw;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -53,8 +54,9 @@ ul {
 	padding: 2vh 4vw;
 	border: 0.4vh solid #F4EDED;
 	margin-top: 11vh;
+	margin-right: 5vw;
 	position: absolute;
-	left: 0;
+	right: 0;
 	top: 0:
 }
 
