--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,18 @@ ul {
 	margin-top: 11vh;
 }
 
+.left {
+	position: absolute;
+	left: 0;
+	margin-left: 5vw;
+}
+
+.right{
+	position: absolute;
+	right: 0
+	margin-right: 5vw;
+}
+
 .readMoreLessButton{
 	border: 0.1vw solid #F4EDED;
 	padding: 1vh 1vw;
