--- a/styles2.css
+++ b/styles2.css
@@ -15,5 +15,10 @@ div{
 }
 
 .menu{
-  
+  display: block;
+  position: fixed;
+  left: 0;
+  border-right: 0.4vw solid #19647E;
+  height: 100%;
+  width: 20vw;
 }
