--- a/styles2.css
+++ b/styles2.css
@@ -15,10 +15,24 @@ div{
 }
 
 .menu{
-  display: block;
   position: fixed;
   left: 0;
   border-right: 0.4vw solid #19647E;
   height: 100%;
   width: 20vw;
+}
+
+.menuButt{
+  display: block;
+  position: fixed;
+  left: 0;
+  width: 20vw;
+}
+
+.menu-image{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 20vw;
+  height: 20vw;
 }
