--- a/styles2.css
+++ b/styles2.css
@@ -13,9 +13,12 @@ body{
   background-color: #F4EDED;
   position: fixed;
   left: 0;
+  top: 0;
   border-right: 0.4vw solid #19647E;
   height: 100%;
   width: 15vw;
+  margin-top: 0;
+  
 }
 
 .menuButt{
@@ -28,10 +31,10 @@ body{
 
 .menu-image{
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
-  width: 15vw;
-  height: 15vw;
+  width: 10vw;
+  height: 10vw;
 }
 
 .formatButtons{
